packages/jsts/tests/dbd/benchmark/TypeError/T02 Cannot use 'in' operator to search for/T02-01/reproducer.js
// originally, this was TS

//const scrubX = (data: any) => {
    const scrubX = (data) => {
        const blackboard = JSON.parse(JSON.stringify(data));

        //let labels: string[] = [];
        let labels = [];
        if(Array.isArray(data)){
            // console.log("not grouped");
            // Not grouped
            blackboard.forEach((item, x) => {
                if(typeof item === "object" && "x" in item){ // Noncompliant: item can be null
                    labels.push(item.x);
                    item.x = x;
                }
            });
            return {labels, data: blackboard};

        }else{
            // Grouped

        }
      }

      scrubX([null])
